@@ -21,6 +21,9 @@ cupt (1.3.0) UNRELEASED; urgency=low
           the average RAM footprint for a solution.
         - Don't try to remove the unsynchronizeable package if the stick is
           set.
+      - Worker:
+        - Don't use File::Path module. Thanks to Bernd Zeimetz.
+          (Closes: #553629)
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 30 Oct 2009 13:54:43 +0200
 
